refactor: Add Watchlist get-by-id and split endpoints
