# apps/api/api-documentation.json
@@ -3267,12 +3267,17 @@
         }
       }
     },
-    "/watchlist/{id}": {
+    "/watchlist/content/{id}": {
       "get": {
-        "operationId": "GET/watchlist/{id}",
+        "operationId": "GET/watchlist/content/{id}",
         "description": "Get watchlist content by id",
         "tags": [
           "Watchlist"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
         ],
         "parameters": [
           {
@@ -3360,8 +3365,184 @@
               }
             }
           },
+          "401": {
+            "description": "You should be logged in to execute this action",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "success": {
+                      "type": "boolean",
+                      "enum": [
+                        false
+                      ]
+                    },
+                    "error": {
+                      "type": "string",
+                      "default": "Not authenticated"
+                    }
+                  },
+                  "required": [
+                    "success"
+                  ]
+                }
+              }
+            }
+          },
           "404": {
             "description": "Content not found in watchlist",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "success": {
+                      "type": "boolean",
+                      "enum": [
+                        false
+                      ]
+                    },
+                    "error": {
+                      "type": "string"
+                    }
+                  },
+                  "required": [
+                    "success",
+                    "error"
+                  ]
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/watchlist/{id}": {
+      "get": {
+        "operationId": "GET/watchlist/{id}",
+        "description": "Get watchlist by id",
+        "tags": [
+          "Watchlist"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "schema": {
+              "type": "string",
+              "minLength": 1,
+              "format": "uuid"
+            },
+            "required": true,
+            "name": "id",
+            "in": "path"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Watchlist retrieved successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "string",
+                      "minLength": 1,
+                      "format": "uuid"
+                    },
+                    "userId": {
+                      "type": "string",
+                      "minLength": 1,
+                      "format": "uuid"
+                    },
+                    "contentId": {
+                      "type": "string",
+                      "minLength": 1,
+                      "format": "uuid"
+                    },
+                    "status": {
+                      "type": "string",
+                      "enum": [
+                        "completed",
+                        "dropped",
+                        "not_interested",
+                        "plan_to_watch",
+                        "undecided",
+                        "watching"
+                      ]
+                    },
+                    "currentEpisode": {
+                      "type": "number",
+                      "nullable": true,
+                      "minimum": 1
+                    },
+                    "currentSeason": {
+                      "type": "number",
+                      "nullable": true,
+                      "minimum": 1
+                    },
+                    "addedAt": {
+                      "type": "string",
+                      "format": "date-time"
+                    },
+                    "startedAt": {
+                      "type": "string",
+                      "nullable": true,
+                      "format": "date-time"
+                    },
+                    "completedAt": {
+                      "type": "string",
+                      "nullable": true,
+                      "format": "date-time"
+                    }
+                  },
+                  "required": [
+                    "id",
+                    "userId",
+                    "contentId",
+                    "status",
+                    "currentEpisode",
+                    "currentSeason",
+                    "addedAt",
+                    "startedAt",
+                    "completedAt"
+                  ]
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "You should be logged in to execute this action",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "success": {
+                      "type": "boolean",
+                      "enum": [
+                        false
+                      ]
+                    },
+                    "error": {
+                      "type": "string",
+                      "default": "Not authenticated"
+                    }
+                  },
+                  "required": [
+                    "success"
+                  ]
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Watchlist not found",
             "content": {
               "application/json": {
                 "schema": {
