# apps/api/src/modules/watchlist/application/use-cases/get-watchlist.use-case.ts
@@ -1,18 +1,22 @@
-import { NotFoundError } from "../../../../shared/errors";
+import { NotFoundError, UnauthorizedError } from "../../../../shared/errors";
 import { Watchlist } from "../../domain/entities/watchlist.entity";
 import { IWatchlistRepository } from "../../domain/interfaces/IWatchlistRepository";
 
-export class GetWatchlistByContentIdUseCase {
+export class GetWatchlistByIdUseCase {
 
   constructor(private readonly watchlistRepository: IWatchlistRepository) {
     this.watchlistRepository = watchlistRepository;
   }
 
   async execute(userId: string, id: string): Promise<Watchlist | null> {
-    const watchlist = await this.watchlistRepository.findByContentId(userId, id);
+    const watchlist = await this.watchlistRepository.findById(id);
 
     if (!watchlist) {
-      throw new NotFoundError(`Content ${id} not found in watchlist.`);
+      throw new NotFoundError(`Watchlist ${id} not found in watchlist.`);
+    }
+
+    if(watchlist.userId !== userId) {
+      throw new UnauthorizedError(`You are not authorized to access this watchlist.`);
     }
 
     return watchlist;
